@@ -65,7 +65,9 @@ TRANSLATIONS = translations/smtube_es.ts \
                translations/smtube_gl.ts \
                translations/smtube_el.ts \
                translations/smtube_he_IL.ts \
-               translations/smtube_pt_BR.ts
+               translations/smtube_pt_BR.ts \
+               translations/smtube_uk.ts
+
 
 # qtsingleapplication
 SOURCES += qtsingleapplication.cpp qtlocalpeer.cpp
