@@ -1,0 +1,557 @@
+<?xml version="1.0" ?><!DOCTYPE TS><TS language="uk" version="2.0">
+<context>
+    <name>About</name>
+    <message>
+        <location filename="../about.ui" line="14"/>
+        <source>About...</source>
+        <translation>Про smtube...</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="33"/>
+        <source>&amp;Info</source>
+        <translation>&amp;Відомості</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="53"/>
+        <location filename="../about.ui" line="109"/>
+        <location filename="../about.ui" line="165"/>
+        <source>icon</source>
+        <translation>піктограма</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="89"/>
+        <source>&amp;Translators</source>
+        <translation>&amp;Перекладачі</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="145"/>
+        <source>&amp;License</source>
+        <translation>&amp;Ліцензія</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="33"/>
+        <source>YouTube%1 Browser for SMPlayer</source>
+        <translation>YouTube%1 Переглядач для SMPlayer</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="35"/>
+        <source>Based on UMPlayer</source>
+        <translation>На основі UMPlayer</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="37"/>
+        <source>Version: %1</source>
+        <translation>Версія: %1</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="39"/>
+        <source>Portable Edition</source>
+        <translation>Портативна редакція</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="42"/>
+        <source>Compiled with Qt %1 (using %2)</source>
+        <translation>Компіляція з Qt %1 (використовується %2)</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="44"/>
+        <source>Visit our web for updates:</source>
+        <translation>Завітайте до нас за оновленнями:</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="107"/>
+        <source>The following people have contributed with translations:</source>
+        <translation>Ці люди внесли вклад в переклади:</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="109"/>
+        <source>Spanish</source>
+        <translation>Іспанська</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="110"/>
+        <source>Russian</source>
+        <translation>Російська</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="111"/>
+        <source>Lithuanian</source>
+        <translation>Литовська</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="112"/>
+        <source>Japanese</source>
+        <translation>Японська</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="113"/>
+        <source>Simplified-Chinese</source>
+        <translation>Китайська спрощена</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="114"/>
+        <source>Basque</source>
+        <translation>Баскська</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="115"/>
+        <source>Portuguese</source>
+        <translation>Португальська</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="116"/>
+        <source>Hungarian</source>
+        <translation>Угорська</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="117"/>
+        <source>Polish</source>
+        <translation>Польська</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="119"/>
+        <source>Greek</source>
+        <translation>Грецька</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="120"/>
+        <source>Hebrew</source>
+        <translation>Іврит</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="144"/>
+        <source>&lt;b&gt;%1&lt;/b&gt; (%2)</source>
+        <translation>&lt;b&gt;%1&lt;/b&gt; (%2)</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="118"/>
+        <source>Galician</source>
+        <translation>Галисійська</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="201"/>
+        <source>&amp;Youtube</source>
+        <translation>&amp;Youtube</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="63"/>
+        <source>Founded in February 2005, YouTube&amp;trade; is the world&apos;s most popular online video community, allowing millions of people to discover, watch and share originally-created videos. YouTube&amp;trade; provides a forum for people to connect, inform, and inspire others across the globe and acts as a distribution platform for original content creators and advertisers large and small.</source>
+        <translation>Будучи заснованим у 2005 році, YouTube&amp;trade; є найпопулярнішим сервісом онлайн відео, що дозволяє мільйонам людей знаходити, дивитись і переглядати створені ними відео. YouTube&amp;trade; являє собою форум для підключення, інформування та натхнення людей по всьому світу і виступає в ролі розподіленої платформи для творців оригінального контенту і рекламодавців, великих і малих.</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="69"/>
+        <source>By using this application you hereby agree to be bound by Google Terms of Services located at %1.</source>
+        <translation>Використовуючи цей додаток, ви погоджуєтеся з Умовами використання Google, що перебувають на %1.</translation>
+    </message>
+</context>
+<context>
+    <name>ConfigDialog</name>
+    <message>
+        <location filename="../configdialog.ui" line="14"/>
+        <source>Settings</source>
+        <translation>Налаштування</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="20"/>
+        <source>Recording</source>
+        <translation>Запис</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="28"/>
+        <source>&amp;Save to this folder</source>
+        <translation>&amp;Зберегти в цю теку</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="45"/>
+        <source>&amp;Quality</source>
+        <translation>&amp;Якість</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="59"/>
+        <location filename="../configdialog.cpp" line="117"/>
+        <source>Normal (360p)</source>
+        <translation>Нормальна (360p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="64"/>
+        <location filename="../configdialog.cpp" line="117"/>
+        <source>HD (720p)</source>
+        <translation>HD (720p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="69"/>
+        <location filename="../configdialog.cpp" line="117"/>
+        <source>Full HD (1080p)</source>
+        <translation>Full HD (1080p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="90"/>
+        <source>&amp;Format</source>
+        <translation>&amp;Формат</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="101"/>
+        <source>MP4</source>
+        <translation>MP4</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="106"/>
+        <source>Flv</source>
+        <translation>Flv</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="132"/>
+        <source>Playback</source>
+        <translation>Відтворення</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="140"/>
+        <source>&amp;Player:</source>
+        <translation>&amp;Програвач:</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.cpp" line="131"/>
+        <source>Low Quality (226p)</source>
+        <translation>Низька якість (226p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.cpp" line="131"/>
+        <source>Medium Quality (360p)</source>
+        <translation>Середня якість (360p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.cpp" line="131"/>
+        <source>High Quality (480p)</source>
+        <translation>Висока якість (480p)</translation>
+    </message>
+</context>
+<context>
+    <name>DownloadFile</name>
+    <message>
+        <location filename="../downloadfile.cpp" line="115"/>
+        <source>%1 hours</source>
+        <translation>%1 годин</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="121"/>
+        <source>%1 minutes</source>
+        <translation>%1 хвилин</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="108"/>
+        <source>unknown time remaining</source>
+        <translation>залишок часу невідомий</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="124"/>
+        <source>%1 seconds</source>
+        <translation>%1 секунд</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="125"/>
+        <source>%1 remaining</source>
+        <translation>%1 залишилося</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="130"/>
+        <source>%1 of %2 MB</source>
+        <translation>%1 з %2 МБ</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="136"/>
+        <source>%1 of %2 KB</source>
+        <translation>%1 з %2 КБ</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="142"/>
+        <source>%1 of %2 bytes</source>
+        <translation>%1 з %2 байтів</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="146"/>
+        <source>%1 of unknown size</source>
+        <translation>%1 невідомого розміру</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="151"/>
+        <source>%1 MB/sec</source>
+        <translation>%1 МБ/сек</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="155"/>
+        <source>%1 KB/sec</source>
+        <translation>%1 КБ/сек</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="159"/>
+        <source>%1 bytes/sec</source>
+        <translation>%1 байтів/сек</translation>
+    </message>
+</context>
+<context>
+    <name>FileChooser</name>
+    <message>
+        <location filename="../filechooser.cpp" line="54"/>
+        <source>Click to select a file or folder</source>
+        <translation>Клікніть для вибору файла чи теки</translation>
+    </message>
+</context>
+<context>
+    <name>RecordingDelegate</name>
+    <message>
+        <location filename="../recordingdialog.cpp" line="120"/>
+        <source>Canceled</source>
+        <translation>Скасовано</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="120"/>
+        <source>Error</source>
+        <translation>Помилка</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="150"/>
+        <source>%1 MB</source>
+        <translation>%1 МБ</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="154"/>
+        <source>%1 KB</source>
+        <translation>%1 КБ</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="158"/>
+        <source>%1 bytes</source>
+        <translation>%1 байтів</translation>
+    </message>
+</context>
+<context>
+    <name>RecordingDialog</name>
+    <message>
+        <location filename="../recordingdialog.cpp" line="204"/>
+        <location filename="../recordingdialog.cpp" line="417"/>
+        <source>Recordings</source>
+        <translation>Записи</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="205"/>
+        <source>&amp;Clear list</source>
+        <translation>&amp;Очистити список</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="206"/>
+        <location filename="../recordingdialog.cpp" line="546"/>
+        <source>&amp;Open folder</source>
+        <translation>&amp;Відкрити теку</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="287"/>
+        <location filename="../recordingdialog.cpp" line="682"/>
+        <source>There was an error in retrieving the download URL.</source>
+        <translation>Виникла помилка при завантаженні URL.</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="287"/>
+        <location filename="../recordingdialog.cpp" line="682"/>
+        <source>Recording failed</source>
+        <translation>Не вдалося записати</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="305"/>
+        <location filename="../recordingdialog.cpp" line="700"/>
+        <source>Starting</source>
+        <translation>Початок</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="338"/>
+        <source>Error</source>
+        <translation>Помилка</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="342"/>
+        <source>Completed</source>
+        <translation>Закінчено</translation>
+    </message>
+    <message numerus="yes">
+        <location filename="../recordingdialog.cpp" line="421"/>
+        <source>%1% of %n video - Recordings</source>
+        <translation><numerusform>%1% з %n відео - Запис</numerusform><numerusform>%1% з %n відео - Записи</numerusform><numerusform>%1% з %n відео - Запису</numerusform></translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="506"/>
+        <source>&amp;Cancel</source>
+        <translation>&amp;Скасувати</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="508"/>
+        <source>&amp;Remove from list</source>
+        <translation>&amp;Видалити зі списку</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="527"/>
+        <location filename="../recordingdialog.cpp" line="549"/>
+        <source>Remove from &amp;list</source>
+        <translation>Видалити зі &amp;списку</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="525"/>
+        <source>&amp;Retry</source>
+        <translation>&amp;Повторити</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="545"/>
+        <source>&amp;Play</source>
+        <translation>Від&amp;творити</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="548"/>
+        <source>&amp;Delete</source>
+        <translation>&amp;Видалити</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="627"/>
+        <source>Fetching URL...</source>
+        <translation>Отримання URL...</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="642"/>
+        <source>File error</source>
+        <translation>Помилка файлу</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="643"/>
+        <source>The file does not exists, would you like to remove it from the list?</source>
+        <translation>Цей файл не існує, бажаєте видалити його зі списку?</translation>
+    </message>
+</context>
+<context>
+    <name>YTDelegate</name>
+    <message>
+        <location filename="../ytdelegate.cpp" line="113"/>
+        <source>%L1 views</source>
+        <translation>%L1 переглядів</translation>
+    </message>
+</context>
+<context>
+    <name>YTDialog</name>
+    <message>
+        <location filename="../ytdialog.cpp" line="210"/>
+        <source>YouTube Browser - SMPlayer</source>
+        <translation>YouTube Переглядач - SMPlayer</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="258"/>
+        <source>Settings</source>
+        <translation>Налаштування</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="264"/>
+        <source>Information</source>
+        <translation>Відомості</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="270"/>
+        <source>Show recordings</source>
+        <translation>Показати записи</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="435"/>
+        <source>Most Relevant</source>
+        <translation>Найбільш актуальні</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="439"/>
+        <source>Most Recent</source>
+        <translation>Найновіші</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="443"/>
+        <source>Most Viewed</source>
+        <translation>Найбільше переглядів</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="447"/>
+        <source>Most Popular</source>
+        <translation>Найпопулярніші</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="451"/>
+        <source>Recently Featured</source>
+        <translation>Нещодавно позначені</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="455"/>
+        <source>Most Rated</source>
+        <translation>Висока оцінка</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="466"/>
+        <source>Most popular videos on YouTube%1</source>
+        <translation>Найпопулярніші відео на YouTube%1</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="467"/>
+        <source>Most rated videos on YouTube%1</source>
+        <translation>За рейтингом відео на YouTube%1</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="587"/>
+        <source>Error: Could not connect to Youtube server.</source>
+        <translation>Помилка: не вдалося з&apos;єднатися з сервером Youtube.</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="471"/>
+        <source>YouTube%2 results for &quot;%1&quot;</source>
+        <translation>YouTube%2 результати для &quot;%1&quot;</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="468"/>
+        <source>Videos recently featured on YouTube%1</source>
+        <translation>Відео недавно розміщене на YouTube%1</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="595"/>
+        <source>No videos found</source>
+        <translation>Відео не знайдено.</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="597"/>
+        <source>No videos found for &quot;%1&quot;</source>
+        <translation>Не знайдено відео для &quot;%1&quot;</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="675"/>
+        <source>&amp;Play video</source>
+        <translation>&amp;Відтворити відео</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="676"/>
+        <source>&amp;Record video</source>
+        <translation>&amp;Запис відео</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="677"/>
+        <source>&amp;Watch on YouTube</source>
+        <translation>&amp;Дивитися на YouTube</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="678"/>
+        <source>&amp;Copy link</source>
+        <translation>&amp;Копіювати посилання</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="233"/>
+        <source>Next</source>
+        <translation>Наступний</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="239"/>
+        <source>Previous</source>
+        <translation>Попередній</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="762"/>
+        <source>Error</source>
+        <translation>Помилка</translation>
+    </message>
+</context>
+</TS>
